--- a/package.json
+++ b/package.json
@@ -10,15 +10,29 @@
   },
   "dependencies": {
     "@ducanh2912/next-pwa": "^8.1.1",
+    "@prisma/client": "^4.11.0",
+    "@types/cookie": "^0.5.1",
     "@types/node": "18.15.1",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "bcrypt": "^5.1.0",
+    "class-variance-authority": "^0.4.0",
+    "clsx": "^1.2.1",
+    "cookie": "^0.5.0",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
-    "next": "13.2.4",
+    "formik": "^2.2.9",
+    "jose": "^4.13.1",
+    "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-feather": "^2.0.10",
+    "react-query": "^3.39.3",
     "sass": "^1.59.2",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "prisma": "^4.11.0"
   }
 }
