--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,10 @@ yarn-error.log*
 next-env.d.ts
 
 
-public/sw.js
-public/sw.js.map
-
-public/workbox-*.js
+# Auto Generated PWA files
+**/public/sw.js
+**/public/workbox-*.js
+**/public/worker-*.js
+**/public/sw.js.map
+**/public/workbox-*.js.map
+**/public/worker-*.js.map
