--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-feather": "^2.0.10",
     "react-query": "^3.39.3",
     "sass": "^1.59.2",
+    "next-pwa": "^5.4.4",
     "typescript": "4.9.5"
   },
   "devDependencies": {
