--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@prisma/client": "^4.11.0",
     "@types/cookie": "^0.5.1",
     "@types/node": "18.15.1",
-    "@types/react": "18.0.28",
+    "@types/react": "^18.0.28",
     "@types/react-dom": "18.0.11",
     "bcrypt": "^5.1.0",
     "class-variance-authority": "^0.4.0",
@@ -23,13 +23,13 @@
     "eslint-config-next": "13.2.4",
     "formik": "^2.2.9",
     "jose": "^4.13.1",
-    "next": "13.1.6",
+    "next": "^13.2.4",
+    "next-pwa": "^5.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-feather": "^2.0.10",
     "react-query": "^3.39.3",
     "sass": "^1.59.2",
-    "next-pwa": "^5.4.4",
     "typescript": "4.9.5"
   },
   "devDependencies": {
