Entry Page Added

--- a/.env
+++ b/.env
@@ -1,3 +1,9 @@
 DATABASE_URL="mysql://freedb_test44:&3qQ&VXx2A&m*Bz@sql.freedb.tech:3306/freedb_mysqlpwatest"
 COOKIE_NAME="__project__"
 JWT_SECRET="hsynaltklc"
+SHADOW_DATABASE_URL="mysql://freedb_test44123:VGC#cHR6G#4D!Jv@sql.freedb.tech:3306/freedb_mysqlpwatestt"
+GOOGLE_CLIENT_ID=428745148841-n0o7v0jie91akaq10v1fi7313e0dto09.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+FACEBOOK_CLIENT_ID=611846117650663
+FACEBOOK_CLIENT_SECRET=493cf5a5ea0f818c7f247f03f60f1490;
+NEXTAUTH_SECRET="hsynaltklc"
