--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ducanh2912/next-pwa": "^8.1.1",
+    "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.11.0",
     "@types/cookie": "^0.5.1",
     "@types/node": "18.15.1",
     "@types/react": "^18.0.28",
     "@types/react-dom": "18.0.11",
+    "@types/react-modal": "^3.13.1",
     "bcrypt": "^5.1.0",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
@@ -24,16 +25,20 @@
     "formik": "^2.2.9",
     "jose": "^4.13.1",
     "next": "^13.2.4",
+    "next-auth": "^4.20.1",
     "next-pwa": "^5.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-feather": "^2.0.10",
+    "react-icons": "^4.8.0",
+    "react-modal": "^3.16.1",
     "react-query": "^3.39.3",
     "sass": "^1.59.2",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/uuid": "^9.0.1",
     "prisma": "^4.11.0"
   }
 }
