Next auth url added

--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ GOOGLE_CLIENT_SECRET=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
 FACEBOOK_CLIENT_ID=611846117650663
 FACEBOOK_CLIENT_SECRET=493cf5a5ea0f818c7f247f03f60f1490;
 NEXTAUTH_SECRET="hsynaltklc"
+NEXTAUTH_URL=https://www.dsumma.com/
