--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 DATABASE_URL=mysql://freedb_test44:%263qQ%26VXx2A%26m%2aBz@sql.freedb.tech:3306/freedb_mysqlpwatest
-COOKIE_NAME="__project__"
-JWT_SECRET="hsynaltklc"
+COOKIE_NAME=__project__
+JWT_SECRET=hsynaltklc
 SHADOW_DATABASE_URL=mysql://freedb_test44123:VGC%23cHR6G%234D%21Jv@sql.freedb.tech:3306/freedb_mysqlpwatestt
 GOOGLE_CLIENT_ID=428745148841-n0o7v0jie91akaq10v1fi7313e0dto09.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 FACEBOOK_CLIENT_ID=611846117650663
 FACEBOOK_CLIENT_SECRET=493cf5a5ea0f818c7f247f03f60f1490;
-NEXTAUTH_SECRET="hsynaltklc"
-NEXTAUTH_URL=https://www.dsumma.com/
+NEXTAUTH_SECRET=hsynaltklc
+# NEXTAUTH_URL=https://www.dsumma.com/signin
