--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.13",
+    "@heroicons/react": "^2.0.16",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.11.0",
     "@types/cookie": "^0.5.1",
@@ -28,6 +30,8 @@
     "next-auth": "^4.20.1",
     "next-pwa": "^5.4.4",
     "react": "18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-date-range": "^1.4.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-modal": "^3.16.1",
@@ -38,6 +42,8 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/react-beautiful-dnd": "^13.1.4",
+    "@types/react-date-range": "^1.4.4",
     "@types/uuid": "^9.0.1",
     "prisma": "^4.11.0"
   }
