--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jose": "^4.13.1",
     "next": "^13.2.4",
     "next-auth": "^4.20.1",
+    "next-connect": "^0.13.0",
     "next-pwa": "^5.4.4",
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.1",
@@ -38,6 +39,7 @@
     "react-query": "^3.39.3",
     "sass": "^1.59.2",
     "typescript": "4.9.5",
+    "usehooks-ts": "^2.9.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
