--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.13",
@@ -44,11 +45,22 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@babel/plugin-syntax-flow": "^7.18.6",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.21.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
     "@types/bcrypt": "^5.0.0",
     "@types/ramda": "^0.28.23",
     "@types/react-beautiful-dnd": "^13.1.4",
     "@types/react-date-range": "^1.4.4",
     "@types/uuid": "^9.0.1",
-    "prisma": "^4.11.0"
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "prisma": "^4.11.0",
+    "ts-node": "^10.9.1",
+    "ve": "^0.1.3"
   }
 }
