Add Create Task-Assign User To Task-And UI Set

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-DATABASE_URL=mysql://freedb_test44:%263qQ%26VXx2A%26m%2aBz@sql.freedb.tech:3306/freedb_mysqlpwatest
+DATABASE_URL=mysql://freedb_my-new-user:%3FzSEG85gkT%25p%24me@sql.freedb.tech:3306/freedb_my-new-db
+
 COOKIE_NAME=__project__
 JWT_SECRET=hsynaltklc
 SHADOW_DATABASE_URL=mysql://freedb_test44123:VGC%23cHR6G%234D%21Jv@sql.freedb.tech:3306/freedb_mysqlpwatestt
