--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-date-range": "^1.4.0",
+    "react-datepicker": "^4.10.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-modal": "^3.16.1",
@@ -56,6 +57,7 @@
     "@types/ramda": "^0.28.23",
     "@types/react-beautiful-dnd": "^13.1.4",
     "@types/react-date-range": "^1.4.4",
+    "@types/react-datepicker": "^4.10.0",
     "@types/uuid": "^9.0.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.5.0",
