--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "pwa",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://localhost:3000/home",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -62,6 +63,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
+    "msw": "^1.2.1",
     "prisma": "^4.11.0",
     "ts-node": "^10.9.1",
     "ve": "^0.1.3"
