--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
-DATABASE_URL=mysql://freedb_my-new-user:%3FzSEG85gkT%25p%24me@sql.freedb.tech:3306/freedb_my-new-db
-
+DATABASE_URL=mysql://dsumma_com:KumAndan2019@mysql48.unoeuro.com:3306/dsumma_com_db
 COOKIE_NAME=__project__
 JWT_SECRET=hsynaltklc
 SHADOW_DATABASE_URL=mysql://freedb_test44123:VGC%23cHR6G%234D%21Jv@sql.freedb.tech:3306/freedb_mysqlpwatestt
