--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
     "cookie": "^0.5.0",
+    "downshift": "^7.6.0",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "formik": "^2.2.9",
     "jose": "^4.13.1",
+    "leaflet": "^1.9.3",
     "next": "^13.2.4",
     "next-auth": "^4.20.1",
     "next-connect": "^0.13.0",
@@ -39,6 +41,7 @@
     "react-datepicker": "^4.10.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-leaflet": "^4.2.1",
     "react-modal": "^3.16.1",
     "react-query": "^3.39.3",
     "sass": "^1.59.2",
@@ -55,6 +58,7 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/bcrypt": "^5.0.0",
+    "@types/leaflet": "^1.9.3",
     "@types/ramda": "^0.28.23",
     "@types/react-beautiful-dnd": "^13.1.4",
     "@types/react-date-range": "^1.4.4",
