--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "react-modal": "^3.16.1",
     "react-query": "^3.39.3",
     "sass": "^1.59.2",
+    "socket.io": "^4.6.1",
+    "socket.io-client": "^4.6.1",
     "typescript": "4.9.5",
     "usehooks-ts": "^2.9.1",
     "uuid": "^9.0.0"
@@ -64,12 +66,14 @@
     "@types/react-date-range": "^1.4.4",
     "@types/react-datepicker": "^4.10.0",
     "@types/uuid": "^9.0.1",
+    "bufferutil": "^4.0.7",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "msw": "^1.2.1",
     "prisma": "^4.11.0",
     "ts-node": "^10.9.1",
+    "utf-8-validate": "^6.0.3",
     "ve": "^0.1.3"
   }
 }
