--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "formik": "^2.2.9",
     "jose": "^4.13.1",
     "leaflet": "^1.9.3",
+    "leaflet-boundary-canvas": "^1.0.0",
     "next": "^13.2.4",
     "next-auth": "^4.20.1",
     "next-connect": "^0.13.0",
@@ -61,6 +62,7 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/bcrypt": "^5.0.0",
     "@types/leaflet": "^1.9.3",
+    "@types/leaflet-boundary-canvas": "^1.0.2",
     "@types/ramda": "^0.28.23",
     "@types/react-beautiful-dnd": "^13.1.4",
     "@types/react-date-range": "^1.4.4",
