--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@heroicons/react": "^2.0.16",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.11.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/cookie": "^0.5.1",
     "@types/node": "18.15.1",
     "@types/react": "^18.0.28",
     "@types/react-dom": "18.0.11",
     "@types/react-modal": "^3.13.1",
     "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
     "cookie": "^0.5.0",
